Improved the readability of README.md

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "obfuscate",
     "email",
     "encrypt",
-    "mailto"
+    "mailto",
+    "inline"
   ],
   "author": "Kamil Tamiola <kamil@tamiola.com>",
   "license": "MIT",
