--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "devDependencies": {
     "concat-stream": "^1.5.1",
+    "coveralls": "^2.11.9",
     "escape-string-regexp": "^1.0.5",
     "eslint": "^2.10.1",
     "gulp": "^3.9.1",
     "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0",
     "object-assign": "^4.1.0",
     "should": "^8.3.1",
     "vinyl": "^1.1.1"
