--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/ktamiola/gulp-hide-email/issues"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "concat-stream": "^1.5.1",
     "coveralls": "^2.11.9",
     "escape-string-regexp": "^1.0.5",
@@ -34,6 +35,8 @@
     "mocha-lcov-reporter": "^1.2.0",
     "object-assign": "^4.1.0",
     "should": "^8.3.1",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
     "vinyl": "^1.1.1"
   },
   "dependencies": {
